tests/custom/STARIS_2022/operation-type-errors/max-type-error-01/stderr.expected
Error:
    max-type-error.essence:2:20:
  |
2 | such that b = (max(4) = 4)
  |                    ^
Type error:
	Expected: "Domain of int-like or matrix of int-like"
	Got: int

cat: *.solution: No such file or directory
